# mxalign

./: LICENSE  README.md  pyproject.toml
src/mxalign/: __init__.py  runner.py  verification.py
src/mxalign/accessors/: __init__.py  space.py  time.py
src/mxalign/align/: __init__.py  space.py  time.py
src/mxalign/interpolations/: __init__.py  base.py  delaunay.py  interpolate.py  registry.py  xarray.py
src/mxalign/loaders/: __init__.py  anemoi_datasets.py  anemoi_inference.py  base.py  loader.py  registry.py
src/mxalign/properties/: properties.py  specs.py  utils.py  validation.py
src/mxalign/transformations/: __init__.py  base.py  external.py  registry.py  transform.py
src/mxalign/utils/: config.py  dates.py  projections.py  save.py
